[FIX] track title in song list horizontal overflow

--- a/widgets/audio_playlist/src/style.css
+++ b/widgets/audio_playlist/src/style.css
@@ -1,10 +1,10 @@
-img {
+#mobile-player img {
     border-radius: 8px;
 }
 
 .album-track-info {
-    /* display: flex;
-    align-items: center; */
+    display: flex;
+    align-items: center;
     width: 100%;
 }
 
@@ -67,7 +67,7 @@ button {
 
 @media screen and (max-width: 450px) {
     .album-track-title {
-        max-width: calc(100vw - 120px);
+        max-width: calc(100vw - 110px);
     }
 
     .m-track-title {
